tests/typing/bad/testfile-affect-5.jl
mutable struct MyStruct a end
x = MyStruct(2)
x.a = 3 + true
